# SpongeMemory

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/sponge-core/: Cargo.toml
crates/sponge-core/examples/: generate_corpus.rs
crates/sponge-core/src/: clock.rs  config.rs  consolidation.rs  constants.rs  index.rs  lib.rs  memory.rs  scoring.rs  types.rs
crates/sponge-core/src/embeddings/: cached.rs  cohere.rs  google.rs  mod.rs  openai.rs  rate_limited.rs  voyage.rs
crates/sponge-core/src/storage/: cold.rs  hot.rs  mod.rs
crates/sponge-core/tests/: thesis_tests.rs
crates/sponge-core/tests/testdata/: mod.rs
crates/sponge-core/tests/testdata/corpus/: all_personas.json  backend_engineer.json  data_scientist.json  devops_engineer.json  enterprise_employee.json  finance_user.json  frontend_engineer.json  healthcare_patient.json  product_manager.json  student.json  support_user.json
crates/sponge-server/: Cargo.toml
crates/sponge-server/src/: main.rs
docs/: API.md  DATABASE_ARCHITECTURE.md  THESIS_TESTS.md
sdks/python/: README.md  pyproject.toml
sdks/python/sponge_client/: __init__.py  client.py  types.py
