[package]
name = "sponge-server"
version.workspace = true
edition = "2021"
license.workspace = true
description = "HTTP server for Sponge memory system"

[[bin]]
name = "sponge"
path = "src/main.rs"

[dependencies]
sponge-core = { path = "../sponge-core" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }
