[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sponge-memory"
version = "0.1.0"
description = "Python client for Sponge - biologically-inspired memory system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["memory", "ai", "llm", "embeddings", "vector-database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sponge"
Documentation = "https://github.com/yourusername/sponge#readme"
Repository = "https://github.com/yourusername/sponge"
